--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         .inter {
             font-family: "Inter", sans-serif;
@@ -78,7 +80,7 @@
 
         <section>
             <div id="card-container" class="grid lg:grid-cols-4 gap-4">
-            
+
 
 
 
@@ -100,7 +102,27 @@
 
         </section>
 
+        <!-- modal section -->
+        <section>
+
+            <!-- Open the modal using ID.showModal() method -->
+            <!-- <button class="btn" onclick="details_modal.showModal()">open modal</button> -->
+            <dialog id="details_modal" class="modal modal-bottom sm:modal-middle">
+                <div class="modal-box">
+                    <h3 class="text-lg font-bold">Hello!</h3>
+                    <p class="py-4">Press ESC key or click the button below to close</p>
+                    <div class="modal-action">
+                        <form method="dialog">
+                            <!-- if there is a button in form, it will close the modal -->
+                            <button class="btn">Close</button>
+                        </form>
+                    </div>
+                </div>
+            </dialog>
+        </section>
     </main>
+
+
 
     <footer>
 
